--- a/about.html
+++ b/about.html
@@ -75,44 +75,26 @@
 
 
 
-    <div class="site-section bg-light">
+    <div class="site-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
-            <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
-            </div>
+          <div class="col-lg-6 col-md-12 mb-5" data-aos="fade">
+            <img src="images/img_6.jpg" class="img-md-fluid" alt="Placeholder image">
           </div>
-          <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
-            <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+          <div class="col-lg-6 col-md-12">
+            <div class="bg-white pl-lg-5 pl-0  pb-lg-5 pb-0">
+            <h3 class="font-weight-bold text-black" data-aos="fade">About Indians In Jacksonville</h3>
+            <p>I believe there is a better way to connect the Indian community together under one platform. What started as a way for me to stay informed about the events
+              and Indian movie showtimes evolved into a Facebook group. A platform to share these information with the growing members from the Indian community.
+              The problem was that so many Indian organizations were disconnected. By creating this website and the Facebook group, Indians In Jacksonville became the one-stop-shop
+              of sources of information. It is in my hope
+              that you will benefit from using this platform.</p>       
+
             </div>
-          </div>
-          <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
-            <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
-            </div>
-          </div>
           </div>
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
 
 
 
@@ -171,8 +153,8 @@
           <div class="col-10 col-md-1 col-lg-2 mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Indians In Jacksonville</h3>
             <ul class="list-unstyled">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Organizations</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="organization.html">Organizations</a></li>
               <li><a href="#">Join Facebook Group</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
