--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="blog.html">About</a></li>
-                <li><a href="blog.html">Organizations</a></li>
-                <li><a href="about.html">Events</a></li>
-                <li><a href="contact.html">Join Facebook Group</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="organization.html">Organizations</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
           </div>
@@ -88,7 +88,7 @@
               and Indian movie showtimes evolved into a Facebook group. A platform to share these information with the growing members from the Indian community.
               The problem was that so many Indian organizations were disconnected. By creating this website and the Facebook group, Indians In Jacksonville became the one-stop-shop
               of sources of information. It is in my hope
-              that you will benefit from using this platform.</p>       
+              that you will benefit from using this platform.</p>
 
             </div>
           </div>
