--- a/organization.html
+++ b/organization.html
@@ -53,10 +53,10 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="blog.html">About</a></li>
-                <li><a href="blog.html">Organizations</a></li>
-                <li><a href="about.html">Events</a></li>
-                <li><a href="contact.html">Join Facebook Group</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="organization.html">Organizations</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
           </div>
