--- a/index.html
+++ b/index.html
@@ -522,8 +522,7 @@
             <ul class="list-unstyled">
               <li><a href="about.html">About</a></li>
               <li><a href="organization.html">Organizations</a></li>
-              <li><a href="#">Join Facebook Group</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
             </ul>
           </div>
         </div>
