--- a/organization.html
+++ b/organization.html
@@ -171,10 +171,9 @@
           <div class="col-10 col-md-1 col-lg-2 mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Indians In Jacksonville</h3>
             <ul class="list-unstyled">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Organizations</a></li>
-              <li><a href="#">Join Facebook Group</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="organization.html">Organizations</a></li>
+              <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
             </ul>
           </div>
         </div>
