--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="organization.html">Organizations</a></li>
-                <li><a href="about.html">Events</a></li>
                 <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
@@ -219,7 +218,7 @@
                     <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
                   </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
                 </div>
-                <h2 class="h5"><a href="about.html">Karaoke Night</h2></a>
+                <h2 class="h5"><a href="https://www.facebook.com/events/2341943499169444/">Karaoke Night</h2></a>
               </div>
               <div class="unit-3-body">
                 <p>Lorem ipsum dolor sit amet consectetur is a nice adipisicing elita ssumenda a similique perferendis dolorem eos.</p>
@@ -520,6 +519,7 @@
           <div class="col-10 col-md-1 col-lg-2 mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Indians In Jacksonville</h3>
             <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="organization.html">Organizations</a></li>
               <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
