--- a/organization.html
+++ b/organization.html
@@ -54,8 +54,7 @@
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="organization.html">Organizations</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a href="organization.html">Organizations</a></li>                
                 <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
@@ -171,6 +170,7 @@
           <div class="col-10 col-md-1 col-lg-2 mb-5 mb-lg-0">
             <h3 class="footer-heading mb-4">Indians In Jacksonville</h3>
             <ul class="list-unstyled">
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="organization.html">Organizations</a></li>
               <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
