--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="organization.html">Organizations</a></li>              
+                <li><a href="organization.html">Organizations</a></li>
                 <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
@@ -83,9 +83,9 @@
           <div class="col-lg-6 col-md-12">
             <div class="bg-white pl-lg-5 pl-0  pb-lg-5 pb-0">
             <h3 class="font-weight-bold text-black" data-aos="fade">About Indians In Jacksonville</h3>
-            <p>I believe there is a better way to connect the Indian community together under one platform. What started as a way for me to stay informed about the events
+            <p>I believe there is a better way to connect the Indian community together under one platform. What started as a way to stay informed about the events
               and Indian movie showtimes evolved into a Facebook group. A platform to share these information with the growing members from the Indian community.
-              The problem was that so many Indian organizations were disconnected. By creating this website and the Facebook group, Indians In Jacksonville became the one-stop-shop
+              By creating this website and the Facebook group, Indians In Jacksonville became the one-stop-shop
               of sources of information. It is in my hope
               that you will benefit from using this platform.</p>
 
