--- a/organization.html
+++ b/organization.html
@@ -54,7 +54,7 @@
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="organization.html">Organizations</a></li>                
+                <li><a href="organization.html">Organizations</a></li>
                 <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
               </ul>
             </nav>
@@ -101,6 +101,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
             </div>
           </div>
+          <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
+            <div class="position-relative unit-8">
+            <a href="#" class="mb-3 d-block img-a"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
+            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+            </div>
           </div>
         </div>
       </div>
