--- a/organization.html
+++ b/organization.html
@@ -80,33 +80,38 @@
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
             <a href="#" class="mb-3 d-block img-a"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Gujarat Samaj of <br>North East Florida</h2>
+            <p>Gujarati Samaj of North East Florida (GSNEF) was established in 1985. Our samaj has grown tremendously over these 30 years from a few families to a large
+              organization with almost eight hundred registered families.
+              Over the years the mission of GSNEF has never changed. The mission of GSNEF is to maintain and preserve our Guajarati culture while being overseas.</p>
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
             <a href="#" class="mb-3 d-block img-a"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Hindu Society of <br> North East Florida</h2>
+            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p> -->
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
             <a href="#" class="mb-3 d-block img-a"><img src="images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3">BAPS Shri Swaminarayan Mandir of Jacksonville</h2>
+            <!--<p>The BAPS Swaminarayan Sanstha is a spiritual, volunteer-driven organization dedicated to improving society through individual growth by
+fostering the Hindu ideals of faith, unity, and selfless service..</p>-->
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
             <a href="#" class="mb-3 d-block img-a"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
-            <span class="d-block text-gray-500 text-normal small mb-3">By <a href="#">Colorlib</a> <span class="mx-2">&bullet;</span> Jan 20th, 2019</span>
-            <h2 class="h5 font-weihgt-normal line-height-sm mb-3"><a href="#" class="text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit</a></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p>
+
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Indo-US Chamber of Commerce North Florida</h2>
+            <p>Our Vision to create vibrant growth for and facilitate access to Indian-American businesses and professionals and our mission to provide an active networking forum
+              among Indian American professionals, business owners and organizations in Northeast Florida, who can advance their interests
+              by the exchange of ideas and promoting professionalism through education and community involvement. </p>
             </div>
           </div>
         </div>
