--- a/organization.html
+++ b/organization.html
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
+            <a href="https://www.facebook.com/gsnef/" class="mb-3 d-block img-a"><img src="images/img_1.jpg" alt="Image" class="img-fluid rounded"></a>
 
             <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Gujarat Samaj of <br>North East Florida</h2>
             <p>Gujarati Samaj of North East Florida (GSNEF) was established in 1985. Our samaj has grown tremendously over these 30 years from a few families to a large
@@ -89,7 +89,7 @@
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
+            <a href="https://www.facebook.com/HsnefTemple/" class="mb-3 d-block img-a"><img src="images/img_2.jpg" alt="Image" class="img-fluid rounded"></a>
 
             <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Hindu Society of <br> North East Florida</h2>
             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In pariatur nostrum asperiores corrupti delectus.</p> -->
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
+            <a href="https://www.facebook.com/pages/BAPS-Shri-Swaminarayan-mandir/178090828889640" class="mb-3 d-block img-a"><img src="images/img_3.jpg" alt="Image" class="img-fluid rounded"></a>
 
             <h2 class="h5 font-weihgt-normal line-height-sm mb-3">BAPS Shri Swaminarayan Mandir of Jacksonville</h2>
             <!--<p>The BAPS Swaminarayan Sanstha is a spiritual, volunteer-driven organization dedicated to improving society through individual growth by
@@ -106,7 +106,7 @@ fostering the Hindu ideals of faith, unity, and selfless service..</p>-->
           </div>
           <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
             <div class="position-relative unit-8">
-            <a href="#" class="mb-3 d-block img-a"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
+            <a href="https://www.facebook.com/IndoUSofNEFL/" class="mb-3 d-block img-a"><img src="images/img_4.jpg" alt="Image" class="img-fluid rounded"></a>
 
             <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Indo-US Chamber of Commerce North Florida</h2>
             <p>Our Vision to create vibrant growth for and facilitate access to Indian-American businesses and professionals and our mission to provide an active networking forum
