--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
           <td>904-403-1717</td>
           <td>n/a </td>
 				</tr>
+        <tr>
+					<td>Anibha Chopra</td>
+					<td>Social Media Expert</td>
+					<td>social media and digital marketing</td>
+          <td>408-896-6329</td>
+          <td>n/a </td>
+				</tr>
 				<tr>
 					<td>Prachee Agrawal</td>
 					<td>Hindi speaking class</td>
