--- a/organization.html
+++ b/organization.html
@@ -56,6 +56,8 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="organization.html">Organizations</a></li>
                 <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
+                <li><a href="https://fb.com/groups/indiansinjacksonville/">Join Facebook Group</a></li>
+                <li><a href="mailto:indiansinjacksonville@gmail.com?subject=Add%20service%20to%20free%20directory&amp;body=Hello!%20%0A%0APlease%20add%20my%20service%20to%20the%20directory%20list.%20%0A%0AName%20of%20person%3A%0A%0AService%3A%20%0A%0APhone%20%23%3A%0A%0AEmail%3A%0A%0ADescription%20(keep%20it%20short)%3A%20%0A%0A%0A%0AThank%20you!%0A%0A"><span class="btn btn-primary btn-block"><span class="h5 mr-2">+</span> Add service to directory</span></a></li>
               </ul>
             </nav>
           </div>
