--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <tr>
 					<td>Vik Singh</td>
 					<td>Masti Mania </td>
-					<td>Decor/Ambience, Live DJ/MC, Photo/Video services</td>
+					<td>Decor, Ambience, Live DJ, MC, Photo,Video services, Event, Wedding, birthday, baby shower, party.</td>
 					<td>765-409-3674</td>
           <td>n/a</td>
 				</tr>
