--- a/organization.html
+++ b/organization.html
@@ -116,6 +116,15 @@ fostering the Hindu ideals of faith, unity, and selfless service..</p>-->
               by the exchange of ideas and promoting professionalism through education and community involvement. </p>
             </div>
           </div>
+          <div class="col-md-6 mb-5 mb-lg-4 col-lg-3" data-aos="fade">
+            <div class="position-relative unit-8">
+            <a href="https://www.facebook.com/jaxgurudwara/" class="mb-3 d-block img-a"><img src="images/img_7.jpg" alt="Image" class="img-fluid rounded"></a>
+
+            <h2 class="h5 font-weihgt-normal line-height-sm mb-3">Sikh Society of North East FLorida (SSNEF) </h2>
+            <p>Sikh Society of North East Florida (SSNEF) is a forum for Sikhs and followers of Sikh faith residing in North East Florida and South
+              Georgia to pursue and achieve the objectives of the Faith, Education, Culture, Humanity, Universal brotherhood and well being. </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
