--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
           <div class="col-md-10">    <div class="portrait">
       <img src="images/img_6.jpg" align="middle">
   </div>
-
+<h3 class="mb-2 text-black w-100" align= "center">Connecting Indian communities in Jacksonville under one platform!</h3>
+<h5 class="mb-2 text-black w-100" align= "center">If you would like to add your service to the directory below, please click "add service to directory"</h5>
             <div class="job-search">
               <div class="tab-content bg-white p-4 rounded" id="pills-tabContent">
                 <div class="tab-pane fade show active" id="pills-job" role="tabpanel" aria-labelledby="pills-job-tab">
@@ -267,11 +268,28 @@
 
         <div class="row justify-content-center text-center mb-5">
          <div class="col-md-6"> <!--< data-aos="fade" >-->
-            <h1 class="text-black">Movie<strong> Showtimes</strong> </h1>
+            <h1 class="text-black">Movie<strong> Info</strong> &<strong> Showtimes</strong></h1>
+            <h5 class="mb-2 text-black w-100" align= "center">Double check the showtimes on Fandango. Movie showtimes may change.</h5>
           </div>
         </div>
 
         <div class="nonloop-block-4 owl-carousel" data-aos="fade">
+          <div class="item col-md-8 mx-auto">
+            <div class="block-38 text-center bg-white p-4">
+              <div class="block-38-img">
+                <div class="block-38-header">
+                  <!-- MOVIE IMAGES -->
+                  <img src="images/person_4.jpg" alt="Image placeholder">
+                  <h1 class="block-38-heading">Hotel Mumbai</h1>
+                  <p class="block-38-subheading">Now Playing @ AMC Regency 24</p>
+                </div>
+                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 11:35am, 3:05pm, 6:25pm, & 9:45pm 10:10am, 1:10pm, 4:10pm, 7:10pm, 10:10pm</span></h4>
+                <div class="block-38-body">
+                  <p>A gripping true story that recounts the siege of the Taj Hotel by terrorists in Mumbai. Refusing to leave their guests, hotel staff risk their lives to keep everyone safe as people make unthinkable sacrifices to protect themselves and their families.</p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="item col-md-8 mx-auto">
 
             <div class="block-38 text-center bg-white p-4">
@@ -279,9 +297,10 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_1.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Kesari</h3>
-                  <p class="block-38-subheading">Now play @ AMC Regency 24</p>
+                  <h1 >Kesari</h1>
+                  <p class="block-38-subheading">Now playing @ AMC Regency 24</p>
                 </div>
+                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 11:35am, 3:05pm, 6:25pm, & 9:45pm</span></h4>
                 <div class="block-38-body">
                   <p>Based on the true story of one of the bravest battles that India ever fought – the Battle of Saragarhi.  </p>
                 </div>
@@ -295,7 +314,7 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_2.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Badla</h3>
+                  <h1 class="block-38-heading">Badla</h1>
                   <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
                 </div>
                 <div class="block-38-body">
@@ -312,7 +331,7 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Romeo Akbar Walter</h3>
+                  <h1 class="block-38-heading">Romeo Akbar Walter</h1>
                   <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
                 </div>
                 <div class="block-38-body">
