--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_4.jpg" alt="Image placeholder">
-                  <h1 class="block-38-heading">Hotel Mumbai</h1>
+                  <h1 >Hotel Mumbai</h1>
                   <p class="block-38-subheading">Now Playing @ AMC Regency 24</p>
                 </div>
                 <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 11:35am, 3:05pm, 6:25pm, & 9:45pm 10:10am, 1:10pm, 4:10pm, 7:10pm, 10:10pm</span></h4>
@@ -312,7 +312,7 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_2.jpg" alt="Image placeholder">
-                  <h1 class="block-38-heading">Badla</h1>
+                  <h1 >Badla</h1>
                   <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
                 </div>
                 <div class="block-38-body">
@@ -329,7 +329,7 @@
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
                   <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h1 class="block-38-heading">Romeo Akbar Walter</h1>
+                  <h1 >Romeo Akbar Walter</h1>
                   <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
                 </div>
                 <div class="block-38-body">
