--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 					<td>Suki Hunjan</td>
 					<td>Licensed Realtor</td>
           <td>Real Estate</td>
-          <td>904-903-8815</td>
-          <td>n/a</td>
+          <td>904-420-7505</td>
+          <td>Suki.Realtor1@gmail.com</td>
 				</tr>
 				<tr>
 					<td>Rakhi Ritu</td>
@@ -298,7 +298,7 @@
                   <h1 >Kesari</h1>
                   <p class="block-38-subheading">Now playing @ AMC Regency 24</p>
                 </div>
-                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 11:35am, 3:05pm, 6:25pm, & 9:45pm</span></h4>
+                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68-"> 11:35am, 3:05pm, 6:25pm, & 9:45pm</span></h4>
                 <div class="block-38-body">
                   <p>Based on the true story of one of the bravest battles that India ever fought – the Battle of Saragarhi.  </p>
                 </div>
