--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
           <td>n/a</td>
           <td>msangani@helmsbriscoe.com</td>
         </tr>
+        <tr>
+          <td>Poonam Yadav </td>
+          <td>Tishya Trends (tishyatrends.com)</td>
+          <td>Wonderful collection of Indian clothing, handicrafts, gifts, and Indian jewelry</td>
+          <td>904-228-4531</td>
+          <td>namaste@tishyatrends.com</td>
+        </tr>
+        <tr>
+          <td>Pooja Vashi</td>
+          <td>Travel Agent / PR Vacations</td>
+          <td>All types of travel booking services except flights only</td>
+          <td>n/a</td>
+          <td>prdreamvacation4u@gmail.com</td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
