--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <td>n/a</td>
         </tr>
         <tr>
-          <td>Archana Thiagarajan</td>
+          <td>Archana Singh</td>
           <td>Impression Decorz</td>
           <td>Event decorations</td>
           <td>904-303-1431</td>
