--- a/index.html
+++ b/index.html
@@ -254,6 +254,13 @@
           <td>n/a</td>
           <td>prdreamvacation4u@gmail.com</td>
         </tr>
+        <tr>
+          <td>Janak Desai</td>
+          <td>Retirement and College Planning</td>
+          <td>Help individuals as well small business owners with different aspects of financial planning</td>
+          <td>904-825-4192</td>
+          <td>j.desai@induscollegeplanning.com</td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
