--- a/index.html
+++ b/index.html
@@ -298,6 +298,24 @@
               <div class="block-38-img">
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
+                  <img src="images/person_3.jpg" alt="Image placeholder">
+                  <h1 >Romeo Akbar Walter</h1>
+                  <p class="block-38-subheading">Now playing @ AMC Regency 24</p>
+                </div>
+                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 12:30pm, 3:40pm, 7:05pm & 10:20pm</span></h4>
+                <div class="block-38-body">
+                  <p>Romeo Akbar Walter (RAW) is a spy thriller that is set against the backdrop of the Indo-Pakistani War of 1971. The film, which is inspired by true events, is directed by Robby Grewal.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="item col-md-8 mx-auto">
+            <div class="block-38 text-center bg-white p-4">
+              <div class="block-38-img">
+                <div class="block-38-header">
+                  <!-- MOVIE IMAGES -->
                   <img src="images/person_4.jpg" alt="Image placeholder">
                   <h1 >Hotel Mumbai</h1>
                   <p class="block-38-subheading">Now Playing @ AMC Regency 24</p>
@@ -309,24 +327,7 @@
               </div>
             </div>
           </div>
-          <div class="item col-md-8 mx-auto">
 
-            <div class="block-38 text-center bg-white p-4">
-              <div class="block-38-img">
-                <div class="block-38-header">
-                  <!-- MOVIE IMAGES -->
-                  <img src="images/person_1.jpg" alt="Image placeholder">
-                  <h1 >Kesari</h1>
-                  <p class="block-38-subheading">Now playing @ AMC Regency 24</p>
-                </div>
-                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68-"> 11:35am, 3:05pm, 6:25pm, & 9:45pm</span></h4>
-                <div class="block-38-body">
-                  <p>Based on the true story of one of the bravest battles that India ever fought – the Battle of Saragarhi.  </p>
-                </div>
-              </div>
-            </div>
-
-          </div>
           <div class="item col-md-8 mx-auto">
             <div class="block-38 text-center bg-white p-4">
               <div class="block-38-img">
@@ -341,24 +342,6 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="item col-md-8 mx-auto">
-
-            <div class="block-38 text-center bg-white p-4">
-              <div class="block-38-img">
-                <div class="block-38-header">
-                  <!-- MOVIE IMAGES -->
-                  <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h1 >Romeo Akbar Walter</h1>
-                  <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
-                </div>
-                <div class="block-38-body">
-                  <p>Romeo Akbar Walter (RAW) is a spy thriller that is set against the backdrop of the Indo-Pakistani War of 1971. The film, which is inspired by true events, is directed by Robby Grewal.</p>
-                </div>
-              </div>
-            </div>
-
           </div>
 
         </div>
@@ -470,24 +453,7 @@ most unusual candy maker. April 14th</p>
             </div>
 
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-4" > <!-- < data-aos="fade" data-aos-delay="100"> -->
 
-            <div class="unit-3 h-100 bg-white">
-
-              <div class="d-flex align-items-center mb-3 unit-3-heading">
-                <div class="unit-3-icon-wrap mr-4">
-                  <svg class="unit-3-svg" xmlns="http://www.w3.org/2000/svg" width="59px" height="68px">
-                    <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
-                  </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
-                </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/1486470951489311/" target=_blank>BAPS 5th Annual Picnic</h2></a>
-              </div>
-              <div class="unit-3-body">
-                <p>Annual picnic with great food, fun and games! March 30th from 12pm to 7pm.</p>
-              </div>
-            </div>
-
-          </div>
 
         </div>
 
