--- a/index.html
+++ b/index.html
@@ -261,6 +261,13 @@
           <td>904-825-4192</td>
           <td>j.desai@induscollegeplanning.com</td>
         </tr>
+        <tr>
+          <td>Hemant Kumar Vashi</td>
+          <td>Free Yoga class in Hindu Temple </td>
+          <td>Free Yoga, Pranam & meditation</td>
+          <td>904-742-6842</td>
+          <td>Hvashi1@gmail.com</td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
