--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
           <td>904-742-6842</td>
           <td>Hvashi1@gmail.com</td>
         </tr>
+        <tr>
+          <td>Swati Koshal</td>
+          <td>Eggless Custom Cakes for all occasions </td>
+          <td>eggless custom cakes for birthdays, anniversaries, graduations, and for all other occasions.</td>
+          <td>904-228-4629</td>
+          <td>swati_koshal@yahoo.com / fb.com/swatikoshal18</td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
