--- a/index.html
+++ b/index.html
@@ -307,23 +307,7 @@
         </div>
 
         <div class="nonloop-block-4 owl-carousel" data-aos="fade">
-          <div class="item col-md-8 mx-auto">
-            <div class="block-38 text-center bg-white p-4">
-              <div class="block-38-img">
-                <div class="block-38-header">
-                  <!-- MOVIE IMAGES -->
-                  <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h1 >Romeo Akbar Walter</h1>
-                  <p class="block-38-subheading">Now playing @ AMC Regency 24</p>
-                </div>
-                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 12:30pm, 3:40pm, 7:05pm & 10:20pm</span></h4>
-                <div class="block-38-body">
-                  <p>Romeo Akbar Walter (RAW) is a spy thriller that is set against the backdrop of the Indo-Pakistani War of 1971. The film, which is inspired by true events, is directed by Robby Grewal.</p>
-                </div>
-              </div>
-            </div>
 
-          </div>
 
           <div class="item col-md-8 mx-auto">
             <div class="block-38 text-center bg-white p-4">
@@ -374,6 +358,8 @@
           </div>
         </div>
         <div class="row hosting">
+
+
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
 
             <div class="unit-3 h-100 bg-white">
@@ -384,10 +370,11 @@
                     <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
                   </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
                 </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/2703641166375245/" target=_blank>Meet & Greet <br> (Young Adults Social Mixer)</h2></a>
+                <h2 class="h5"><a href="https://www.facebook.com/events/782089665510602/" target=_blank>GSNEF Picnic 2019</h2></a>
               </div>
               <div class="unit-3-body">
-                <p>A free event for Indian singles and couples to come and hang out! <br> April 14th, 2019 @ 1pm. </p>
+                <p>Please join us for a fun-filled afternoon
+Sports, kids activities, games. More info in the event page.</p>
               </div>
             </div>
 
@@ -402,67 +389,10 @@
                     <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
                   </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
                 </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/260586908213859/" target=_blank>Health & Wellness Seminar by TAJA</h2></a>
+                <h2 class="h5"><a href="https://www.facebook.com/events/445717099533190/" target=_blank>16th Annual Gala Celebration</h2></a>
               </div>
               <div class="unit-3-body">
-                <p>TAJA presents Special Health and Wellness Seminar on Saturday April 13th from 2- 4 PM - A FREE  Event to all.</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
-
-            <div class="unit-3 h-100 bg-white">
-
-              <div class="d-flex align-items-center mb-3 unit-3-heading">
-                <div class="unit-3-icon-wrap mr-4">
-                  <svg class="unit-3-svg" xmlns="http://www.w3.org/2000/svg" width="59px" height="68px">
-                    <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
-                  </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68" target=_blank></span>
-                </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/781300512226449/">Immigration Seminar</h2></a>
-              </div>
-              <div class="unit-3-body">
-                <p>Immigration Seminar with Ashwin Sharma, ESQ. Sponsored by Indo-US, AIM REALTY & Sharma Law Office. April 6th from 6pm to 8pm</p>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
-
-            <div class="unit-3 h-100 bg-white">
-
-              <div class="d-flex align-items-center mb-3 unit-3-heading">
-                <div class="unit-3-icon-wrap mr-4">
-                  <svg class="unit-3-svg" xmlns="http://www.w3.org/2000/svg" width="59px" height="68px">
-                    <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
-                  </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
-                </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/158834971717361/" target=_blank>Kyra and the candy factory by Bollywood Dance Mania</h2></a>
-              </div>
-              <div class="unit-3-body">
-                <p>This musical is about a young girl and her widowed
-mother who win a tour through the most magnificent candy factory in the world, led by the world's
-most unusual candy maker. April 14th</p>
-              </div>
-            </div>
-
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
-
-            <div class="unit-3 h-100 bg-white">
-
-              <div class="d-flex align-items-center mb-3 unit-3-heading">
-                <div class="unit-3-icon-wrap mr-4">
-                  <svg class="unit-3-svg" xmlns="http://www.w3.org/2000/svg" width="59px" height="68px">
-                    <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
-                  </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
-                </div>
-                <h2 class="h5"><a href="https://www.facebook.com/events/2341943499169444/" target=_blank>Karaoke Night</h2></a>
-              </div>
-              <div class="unit-3-body">
-                <p>ICS Karaoke Nite is a non-stop bonanza of Indian music numbers. Enough of bathroom singing. It's time to embarrass yourself or annoy others. April 6th.  </p>
+                <p> The 16th Annual Gala Celebration by Indo-US Chamber of Commerce of North East Florida. </p>
               </div>
             </div>
 
